--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,47 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backg3"
-    android:padding="2dp"
     tools:context=".ui.MainActivity">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_title_sec"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_Lesson_min"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="@color/Primary"
-        app:cardCornerRadius="0dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tv_title_sec"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/Primary"
-            android:textColor="@android:color/white"
-            android:textSize="28sp"
-            tools:text="Lessons" />
-
-        <ImageView
-            android:id="@+id/iv_back_sec"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/back" />
-    </com.google.android.material.card.MaterialCardView>
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        android:layout_height="match_parent">
+        <WebView
+            android:id="@+id/videoWeb"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cv_title_sec"
-            />
+            android:layout_height="match_parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <FrameLayout
+        android:id="@+id/cl_Lesson_max"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
